# ynab-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-25-ynab-mcp.md
docs/superpowers/specs/: 2026-04-25-ynab-mcp-design.md
src/ynab_mcp/: config.py  server.py  summaries.py  ynab_client.py
tests/: test_config.py  test_server.py  test_summaries.py  test_ynab_client.py
