[project]
name = "ynab-mcp"
version = "0.1.0"
description = "Read-only FastMCP server for YNAB budget conversations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==3.0.0",
    "httpx>=0.28.1,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ynab_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
